Update quotes server description in panu.conf.example

--- a/panu.conf.example
+++ b/panu.conf.example
@@ -20,8 +20,7 @@ fifopath = fifo
 shortener_url = https://ploudseeker.com/s/
 shortener_external_url = https://ploudseeker.com/s/
 
-# URL for the quotes server. This is a simple HTTP server created in a thread of the bot.
-# Just make sure it's reachable from the internet
+# Simple HTTP server to browse quotes easily.
 # Warning: disabled by default because this is not secure,
 # see https://docs.python.org/2/library/simplehttpserver.html
 allow_http_server = False
