--- a/env.example
+++ b/env.example
@@ -1,5 +1,11 @@
 # Changed by setup_docker.sh
 MARIADB_PASSWORD=CHANGEME
 
+# Domain for which to generate the certificate (for the URL shortener)
+LETSENCRYPT_DOMAIN=yourdomain.com
+
+# Email for Let's Encrypt
+LETSENCRYPT_EMAIL=panu@yourdomain.com
+
 # External URL to reach your domain (for the URL shortener)
 EXTERNAL_URL=https://your_domain.com
